web/css/styles.css
/* ... */
.detail-view {
  overflow: auto;
}
.detail-view tr th {
  width: 30%;
  text-align: right;
  padding: 10px 20px!important;
  font-size: 12.8px;
}
.detail-view tr td {
  text-align: center;
}
.product-chart {
  border: 1px solid #939598;
  margin: 10px 0;
}
.product-chart .col-sm-3 {
  background-color: #D1D3D4;
  height: 100%;
}
.product-chart .col-sm-3 .img-container {
  height: 208px;
  width: 216px;
  overflow: hidden;
  text-align: center;
}
.product-chart .col-sm-3 .img-container img {
  width: 100%;
  height: auto;
  display: inline-block;
}
.product-chart .col-sm-9 {
  padding-left: 10px!important;
}
.product-chart h5 {
  color: #939598;
  margin: 5px 0;
  text-align: left;
}
.product-chart h4 {
  text-align: center;
  margin: 5px 0;
}
.product-chart h4:first-of-type {
  text-align: left;
}
.product-chart .row {
  border-bottom: 1px solid #D1D3D4;
}
.product-chart .row:last-child {
  margin: 10px 0;
  border-bottom: none;
}
.payment-index h1 {
  margin-top: 30px;
  margin-bottom: 40px;
}
.payment-index h4 {
  font-family: 'latobold';
  text-transform: uppercase;
}
.payment-index h3 {
  margin-top: 50px;
  text-transform: capitalize;
}
#billsearch-bill_types label,
#billsearch-statuses label,
#billsearch-payment_methods label,
#taxcondition-billtypes label {
  font-weight: 400;
}
.graph-responsive {
  width: 100%;
  height: 200%;
  overflow: hidden;
}
#ui-datepicker-div {
  z-index: 2!important;
}
td.ui-datepicker-days-cell-over.ui-datepicker-today {
  background-color: #009C1C;
}
a.ui-state-default.ui-state-active {
  color: #d9534f;
}
.ui-state-highlight,
.ui-widget-content .ui-state-highlight,
.ui-widget-header .ui-state-highlight {
  color: #009C1C;
  font-weight: 700;
}
@media only screen and (max-width: 768px) {
  /* Force table to not be like tables anymore */
  #grid,
  .table-responsive {
    /* Hide table headers (but not display: none;, for accessibility) */
    /*
        Label the data
        */
  }
  #grid table,
  .table-responsive table,
  #grid thead,
  .table-responsive thead,
  #grid tbody,
  .table-responsive tbody,
  #grid th,
  .table-responsive th,
  #grid td,
  .table-responsive td,
  #grid tr,
  .table-responsive tr {
    display: block!important;
  }
  #grid thead tr,
  .table-responsive thead tr {
    position: absolute!important;
    top: -9999px !important;
    left: -9999px !important;
  }
  #grid tr,
  .table-responsive tr {
    border: 1px solid #ccc!important;
  }
  #grid td,
  .table-responsive td {
    /* Behave like a "row" */
    border: none!important;
    border-bottom: 1px solid #eee!important;
    position: relative!important;
    padding-left: 50%!important;
    white-space: normal!important;
    text-align: left!important;
    font-size: 1em!important;
    min-height: 36px;
    text-align: center!important;
  }
  #grid td a span,
  .table-responsive td a span {
    padding-left: 10px;
  }
  #grid td table,
  .table-responsive td table,
  #grid td tr,
  .table-responsive td tr {
    border: none!important;
  }
  #grid td td,
  .table-responsive td td {
    padding-left: 5px!important;
    border: none!important;
    text-align: center!important;
  }
  #grid td:before,
  .table-responsive td:before {
    /* Now like a table header */
    position: absolute!important;
    /* Top/left values mimic padding */
    top: 6px!important;
    left: 6px!important;
    width: 45%!important;
    padding-right: 10px!important;
    white-space: nowrap!important;
    text-align: left!important;
    font-weight: bold!important;
  }
  #grid td:before,
  .table-responsive td:before {
    content: attr(data-title) !important;
  }
}
.wrap {
  min-height: 75%;
}

/* [id^="user-management-"] div.panel-default {
  height: 40em;
} */
#user-management-permission-view .panel-default, 
#user-management-role-view .panel-default,
#user-management-user-permission-set .panel-default{
  height: 40em;
}


#user-management-permission-view form,
#user-management-role-view form,
#user-management-user-permission-set form {
  overflow: scroll;
  overflow-x: hidden;
  height: 33.5em;
  margin-bottom: 10em;
}
#user-management-user-permission-set div.col-sm-8 div.panel-body{
  overflow: scroll;
  overflow-x: hidden;
  height: 35em;
}

#user-management-permission-view .col-sm-6:nth-of-type(2) form{
  overflow-x: scroll;
}

#user-management-role-view button.btn.btn-primary.btn-sm, 
#user-management-permission-view button.btn.btn-primary.btn-sm,
#user-management-user-permission-set button.btn.btn-primary.btn-sm{
  position:absolute;
	bottom:20px;
}
#user-management-permission-view form .row .col-sm-3 button.btn.btn-primary.btn-sm{
  position:relative;
	bottom:0px;
}
#user-management-permission-view .col-sm-6:nth-of-type(2) .row {
  display: flex;
  justify-content: space-between;
}


#user-management-permission-view .col-sm-6:nth-of-type(2) form .row div.col-sm-3,
#user-management-permission-view .col-sm-6:nth-of-type(2) form .row div.col-sm-6{
  margin: 0 ;
  padding: 0 ;
  width: auto;
  
}

/* collapse menu properties */

#sale-bill-index div.form-group{
  margin-right: 0;
}
/* .input-group is the div behing the input tag. practically invisible */
#sale-bill-index .col-sm-8 .col-sm-6 .input-group{
  margin : 0;
  width: 100%;
}

#sale-bill-index div.bill-index div.row{
  display: flex;

  justify-content: space-between;

}

#sale-bill-index div .text-right{
  display: flex;
  justify-content: space-between;
}

#reports-reports-discount table,
#reports-reports-customer-per-discount table{
  background: hsla(192, 100%, 85%, 0.26);
  
}

#site-index .company-logo{
  width: 15rem;
}

